# fgentic

./: .editorconfig  .gitignore  .gitleaks.toml  .sops.yaml  ADOPTERS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  PLAN.md  README.md  SECURITY.md  SPEC.md  cliff.toml  dprint.json  lefthook.yml  mise.toml  n  renovate.json5  skaffold.yaml  trivy.yaml  zizmor.yml
apps/synapse-federation-policy/: .gitignore  AGENTS.md  README.md  dprint.json  kustomization.yaml  mise.toml  pyproject.toml
docs/: admin-console.md  adopter-decision-brief.md  agent-reference.md  airgap.md  architecture.md  audit.md  bridge.md  chat-coexistence.md  cncf-sandbox-application.md  compliance.md  cost-dashboards.md  demo-recording.md  design-decisions.md  exit-strategy.md  extending-without-forking.md  federation-offboarding.md  federation-onboarding.md  federation.md  fediverse.md  forking.md  grounding.md  group-sync.md  hooks.py  hosted-agents.md  identity.md  index.md  interop-slack.md  interop.md  licensing.md  migration-guide.md  mkdocs.yml  models.md  moderation.md  observability.md  open-stack.md  operations-handbook.md  performance.md  production.md  pyproject.toml  reference-architecture.md  (+7 more)
docs/adopters/: index.md  template.md
docs/adr/: 0001-open-standard-agent-platform.md  0002-matrix-collaboration-fabric.md  0003-synapse-mas-element-ess.md  0004-a2a-delegation.md  0005-matrix-a2a-bridge-appservice.md  0006-agentgateway-chokepoint.md  0007-shared-postgres-db-per-service.md  0008-unencrypted-agent-rooms.md  0009-agent-authorization-model.md  0010-defer-spiffe-workload-identity.md  0011-teams-coexistence-not-bridge.md  0012-bridge-decomposition-surface-budget.md  0013-federation-lab-acceptance-rig.md  0014-activitypub-second-federation-transport.md  0015-federated-room-encryption.md  0016-durable-delegation-ledger.md  0017-permission-aware-identity-binding.md  0018-content-bounded-identity-audit.md  0019-synapse-media-store.md  0020-partner-trust-registry-domain-model.md  0020-retain-bash-acceptance-rigs.md  0021-pinned-key-resolution.md  0021-retrieval-query-embedding-egress.md  0022-governed-user-agent-memory.md  index.md
docs/onboarding/: developer.md  dpo.md  (+4 more)
(+1107 files in other folders)
